# starfleet-node

./: .gitignore  Dockerfile  Dockerfile.nonvalidator.testnet  Dockerfile.testnet  Dockerfile.worker.testnet  README.md  alphaSpecRaw.json  alphaTestnetSpecRaw.json  chainSpecRaw.json  newSpecRaw.json  rust-toolchain  starfleet4nodeSpecRaw.json  starfleetAlphaTestnetSpecRaw.json  starfleetLiveSpecRaw.json  testnetSpec.json  testnetSpecRaw.json  transaction-worker.js  twoNodesSpecRaw.json
client/consensus/: Cargo.toml
client/db/: Cargo.toml
client/mapping-sync/: Cargo.toml
client/rpc/: Cargo.toml
moonbeam-truffle/: truffle-config.js
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
ot-node-configs/: starting_commands.sh
runtime/: Cargo.toml
runtime/src/: account.rs  impls.rs  lib.rs
tests/: README.md  contract_deploy.js  contract_deploy_test.js  contract_deploy_web3.js  deploy_contract.js  ot_node_transaction_test.js  package-lock.json  package.json  simple_transaction.js
tests/js-tests/: contract-deployment-web3.js  package-lock.json  package.json  simpe-contract-deployment-ethereumtx.js  simple-contract-deployment.js  simple-transaction.js  transaction-service.js
tests/truffle-tests/: package-lock.json  package.json  truffle-config.js
tests/ts-tests/: package-lock.json  package.json
transaction_service/: transaction-config.json  transaction-service.js  transaction-worker.js
truffle/: package-lock.json  package.json  truffle-config.js
truffle/migrations/: 2_total_migration.js
