[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-dev'

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-evm = {  git = "https://github.com/paritytech/frontier" }
pallet-ethereum = { git = "https://github.com/paritytech/frontier" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

fc-consensus = { git = "https://github.com/paritytech/frontier" }
fp-consensus = { git = "https://github.com/paritytech/frontier" }
node-template-runtime = { path = "../runtime", package="starfleet-node" }
fc-rpc = { git = "https://github.com/paritytech/frontier" }
fp-rpc = { git = "https://github.com/paritytech/frontier" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }