[package]
name = "fc-mapping-sync"
version = "1.1.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Mapping sync logic for Frontier."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
sp-runtime = "3.0.0"
sp-blockchain = "3.0.0"
sc-client-api = "3.0.0"
sp-api = "3.0.0"
fp-consensus = "1.0.0"
fc-consensus = "1.0.0"
fc-db = "1.0.0"
fp-rpc = "1.0.0"
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.1"
log = "0.4.8"
