[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-derive = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
ethereum-types = "0.11.0"
evm = "0.25.0"
fc-consensus = "1.0.0"
fc-db = "1.0.0"
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-consensus = "1.0.0"
fp-rpc = "1.0.0"
fp-storage = "1.0.0"
sp-io = "3.0.0"
sp-runtime = "3.0.0"
sp-api = "3.0.0"
sp-transaction-pool = "3.0.0"
sp-storage = "3.0.0"
sp-blockchain = "3.0.0"
sc-service = "0.9.0"
sc-client-api = "3.0.0"
sc-rpc = "3.0.0"
sc-network = "0.9.0"
pallet-evm = "3.0.0"
fp-evm = "1.0.0"
pallet-ethereum = "1.0.0"
ethereum = { version = "0.7.1", features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "2.0.0" }
rlp = "0.5"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"

[features]
rpc_binary_search_estimate = []
